--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
 # Currency Symbol
-NEXT_PUBLIC_CURRENCY_SYMBOL = '$'
+NEXT_PUBLIC_CURRENCY_SYMBOL='$'
+
+# Clerk
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
+CLERK_SECRET_KEY=""
+
+# Prisma / Neon Postgres
+DATABASE_URL=""
+DIRECT_URL=""
